# EchoMind-Backend

./: .env.production  .gitignore  .render-buildpacks.yaml  .replit  Dockerfile  README.md  alembic.ini  build.sh  buildpacks.yml  claude_code_standalone.py  claude_code_terminal.py  final-patch  install_deps.sh  memory.json  prestart.sh  pyproject.toml  render-build.sh  render.yaml  requirements.txt  seed.py  start.sh  test_claude_code.py
alembic/: env.py
alembic/versions/: 01cea9899625_final_model_cleanup.py  2db83b9b3e21_add_agent_column_to_session.py  4a42a111eda8_initial_schema.py  50d5e3f4da10_final_model_cleanup.py  578fdb5bdb61_add_agent_to_session.py  8a9a860061d6_rename_session_to_sessionlog.py  bf7764b3197d_final_model_cleanup.py  efc80cb21b5e_add_agent_to_sessions.py  new_agent_bridge_models.py
app/: code_execution.py  database.py  error_handlers.py  exception_handler.py  get_api_key.py  logging_config.py  main.py  models.py
app/agents/: __init__.py  context.py  memory.py  prompts.py  protocol.py  switching.py
app/integrations/: __init__.py  openai_client.py
app/middleware/: __init__.py  cors.py
app/routes/: admin.py  admin_stats_route.py  claude_code.py  code.py  flag_queue_route.py  health.py  log_milestone_route.py  log_session_route.py  log_summary_route.py  media.py  memory.py  milestone.py  session.py  summary.py
app/security/: __init__.py  api_keys.py  authentication.py  authorization.py  encryption.py  privacy.py  rate_limiter.py
app/static/: README.md  claude-code-chat.html  echomind-code-assistant-README.md  (+1 more)
migrations/: env.py
(+4 files in other folders)
